--- a/src/app/shared/modules/feed/components/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed.component.html
@@ -19,7 +19,7 @@
         <a [routerLink]="['/articles', article.slung]" class="preview-link">
             <h1>{{ article.title }}</h1>
             <p>{{ article.description }}</p>
-            HERE IS LIST OF TAGS
+            <mc-tag-list [tags]="article.tagList"></mc-tag-list>
         </a>
     </div>
     <!-- ? not nececssary, because pagination is inside the module -->
