--- a/src/app/shared/modules/feed/components/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed.component.html
@@ -16,7 +16,7 @@
             <span class="date">{{ article.createdAt }}</span>
         </div>
         <div class="pull-xs-right">ADD TO FAVORITES</div>
-        <a [routerLink]="['/articles', article.slung]" class="preview-link">
+        <a [routerLink]="['/articles', article.slug]" class="preview-link">
             <h1>{{ article.title }}</h1>
             <p>{{ article.description }}</p>
             <mc-tag-list [tags]="article.tagList"></mc-tag-list>
@@ -24,8 +24,8 @@
     </div>
     <!-- ? not nececssary, because pagination is inside the module -->
     <!-- pagination is stateless -->
-    <mc-pagination 
-        [total]="(feed$ | async)?.articlesCount" 
+    <mc-pagination
+        [total]="(feed$ | async)?.articlesCount"
         [limit]="limit"
         [url]="baseUrl"
         [currentPage]="currentPage"
