--- a/src/app/shared/modules/feed/components/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed.component.html
@@ -15,7 +15,10 @@
             </a>
             <span class="date">{{ article.createdAt }}</span>
         </div>
-        <div class="pull-xs-right">ADD TO FAVORITES</div>
+        <div class="pull-xs-right">
+          <mc-add-to-favorites [isFavorited]="article.favorited" [articleSlug]="article.slug"
+            [favoritesCount]="article.favoritesCount"></mc-add-to-favorites>
+        </div>
         <a [routerLink]="['/articles', article.slug]" class="preview-link">
             <h1>{{ article.title }}</h1>
             <p>{{ article.description }}</p>
