--- a/src/app/userProfile/components/userProfile.component.html
+++ b/src/app/userProfile/components/userProfile.component.html
@@ -6,7 +6,7 @@
           <img src="user-image" [src]="userProfile.image" />
           <h4>{{userProfile.username}}</h4>
           <p>{{userProfile.bio}}</p>
-          <mc-follow-button [isFollowed]="userProfile.following" [username]="userProfile.username"
+          <mc-follow-button [isFollowed]="userProfile.following" [username]="userProfile.username" [profileSlug]="slug"
             *ngIf="!(isCurrentUserProfile$ | async)"></mc-follow-button>
           <a class="btn btn-sm btn-outline-secondary action-btn" [routerLink]="['/settings']"
             *ngIf="isCurrentUserProfile$ | async"> Edit Profile Settings </a>
@@ -23,14 +23,15 @@
               <!-- routerLinkActive вішає класс, коли посилання активне -->
               <a [routerLink]="['/profiles', userProfile.username]" class="nav-link" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact: true}">
-                My Posts
+                <span *ngIf="(isCurrentUserProfile$ | async); else username">My</span>
+                <ng-template #username>{{userProfile.username}}'s</ng-template>&nbsp;Posts
               </a>
             </li>
             <li class="nav-item">
               <!-- routerLinkActive вішає класс, коли посилання активне -->
               <a [routerLink]="['/profiles', userProfile.username, 'favorites']" class="nav-link"
                 routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                Favorites Posts
+                <span *ngIf="!(isCurrentUserProfile$ | async)">{{userProfile.username}}&nbsp;</span>Favorites Posts
               </a>
             </li>
           </ul>
